@startuml
'https://plantuml.com/class-diagram

class EntityManager
interface Entity

'abstract AbstractCollection
'interface List
'interface Collection
'
'List <|-- AbstractList
'Collection <|-- AbstractCollection
'
'Collection <|- List
'AbstractCollection <|- AbstractList
'AbstractList <|-- ArrayList

Entity -> EntityManager: owner

interface Entity<T> {
    $id: string // uuid7 id
    $type: string // entity type
}

class EntityManager {
    get<T>(entityId: string, type?: MetaName<T>): Entity<T>
    ' create or get entity, updating its data
    ensure<T>(type: MetaName<T>, data: Partial<T>): Entity<T>
}

@enduml
